--- a/src/globals.css
+++ b/src/globals.css
@@ -1,6 +1,6 @@
 
 .container{
-    max-width: 1440px;
+    min-width: 100vw;
     margin: 0 auto;
 }
 
@@ -36,5 +36,6 @@ main{
 .comentario{
     background-color: hsl(219, 30%, 18%);
 }
+
 
 
